--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "foundry-vtt-pathfinding",
-  "version": "0.0.3",
-  "description": "",
+  "version": "0.0.4",
   "dependencies": {
     "@babel/runtime": "^7.9.2",
     "core-js": "^3.6.4",
@@ -16,7 +15,7 @@
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack --mode development"
   },
   "author": "Exote"
 }
