--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foundry-vtt-pathfinding",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "dependencies": {
     "@babel/runtime": "^7.9.2",
     "core-js": "^3.6.4",
@@ -15,7 +15,7 @@
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "build": "webpack --mode development"
+    "build": "webpack --mode production"
   },
   "author": "Exote"
 }
