--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foundry-vtt-pathfinding",
+  "name": "foundry-vtt-route-finder",
   "version": "0.2.1",
   "dependencies": {
     "@babel/runtime": "^7.9.2",
